"""Build targets for Advent of Code Swift solution."""

load("@build_bazel_rules_swift//swift:swift_binary.bzl", "swift_binary")
load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("@build_bazel_rules_swift//swift:swift_test.bzl", "swift_test")

# Shared solution library
swift_library(
    name = "solution",
    srcs = ["Common.swift"],
    visibility = ["//visibility:public"],
)

# Part 1 binary - outputs only part 1 result
swift_binary(
    name = "part1",
    srcs = ["Part1.swift"],
    deps = [":solution"],
)

# Part 2 binary - outputs only part 2 result
swift_binary(
    name = "part2",
    srcs = ["Part2.swift"],
    deps = [":solution"],
)

# Main verification binary
swift_binary(
    name = "main",
    srcs = ["Main.swift"],
    deps = [":solution"],
)

# Unit tests
swift_test(
    name = "aoc_tests",
    srcs = ["Tests.swift"],
    deps = [":solution"],
)
