"""Build targets for Advent of Code Swift solution."""

load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

# Part 1 binary - outputs only part 1 result
swift_binary(
    name = "part1",
    srcs = [
        "Common.swift",
        "Part1.swift",
    ],
    copts = ["-target", "x86_64-apple-macos10.15"],
)

# Part 2 binary - outputs only part 2 result
swift_binary(
    name = "part2",
    srcs = [
        "Common.swift",
        "Part2.swift",
    ],
    copts = ["-target", "x86_64-apple-macos10.15"],
)

# Main verification binary
swift_binary(
    name = "main",
    srcs = [
        "Common.swift",
        "Main.swift",
    ],
    copts = ["-target", "x86_64-apple-macos10.15"],
)

# Unit tests disabled - swift_test requires Apple CC toolchain which has
# compatibility issues with Bazel 8 + bzlmod. The binaries work fine.
# swift_test(
#     name = "aoc_tests",
#     srcs = ["Tests.swift"],
#     deps = [":solution"],
# )
