"""Build targets for Advent of Code Zig solution."""

# Part 1 binary - outputs only part 1 result
genrule(
    name = "part1",
    srcs = [
        "part1.zig",
        "common.zig",
    ],
    outs = ["part1_exe"],
    cmd = "zig build-exe -O ReleaseFast -femit-bin=$@ $(location part1.zig)",
    executable = True,
)

# Part 2 binary - outputs only part 2 result
genrule(
    name = "part2",
    srcs = [
        "part2.zig",
        "common.zig",
    ],
    outs = ["part2_exe"],
    cmd = "zig build-exe -O ReleaseFast -femit-bin=$@ $(location part2.zig)",
    executable = True,
)

# Unit tests
genrule(
    name = "common_test",
    srcs = ["common.zig"],
    outs = ["test_common_exe"],
    cmd = "zig test -femit-bin=$@ $(location common.zig)",
    executable = True,
)
