"""Build targets for Advent of Code Zig solution."""

# Part 1 binary - outputs only part 1 result
genrule(
    name = "part1",
    srcs = [
        "part1.zig",
        "common.zig",
    ],
    outs = ["part1_exe"],
    cmd = "mkdir -p $(@D)/zig-cache && ZIG_GLOBAL_CACHE_DIR=$(@D)/zig-cache ZIG_LOCAL_CACHE_DIR=$(@D)/zig-cache zig build-exe -O ReleaseFast -femit-bin=$@ $(location part1.zig)",
    executable = True,
)

# Part 2 binary - outputs only part 2 result
genrule(
    name = "part2",
    srcs = [
        "part2.zig",
        "common.zig",
    ],
    outs = ["part2_exe"],
    cmd = "mkdir -p $(@D)/zig-cache && ZIG_GLOBAL_CACHE_DIR=$(@D)/zig-cache ZIG_LOCAL_CACHE_DIR=$(@D)/zig-cache zig build-exe -O ReleaseFast -femit-bin=$@ $(location part2.zig)",
    executable = True,
)

# Unit tests
genrule(
    name = "common_test_bin",
    srcs = ["common.zig"],
    outs = ["test_common_exe"],
    cmd = "mkdir -p $(@D)/zig-cache && ZIG_GLOBAL_CACHE_DIR=$(@D)/zig-cache ZIG_LOCAL_CACHE_DIR=$(@D)/zig-cache zig test -femit-bin=$@ $(location common.zig)",
    executable = True,
)

sh_test(
    name = "common_test",
    srcs = [":common_test_bin"],
)
