"""Build targets for Advent of Code 2016 Day 1 Haskell solution."""

load("//build:haskell.bzl", "haskell_binary")

# Main executable - runs both parts and validates results
haskell_binary(
    name = "s16e01-haskell",
    main = "Main.hs",
    deps = ["Common.hs"],
)

# Part 1 binary - outputs only part 1 result
haskell_binary(
    name = "part1",
    main = "Part1Main.hs",
    deps = ["Common.hs"],
)

# Part 2 binary - outputs only part 2 result
haskell_binary(
    name = "part2",
    main = "Part2Main.hs",
    deps = ["Common.hs"],
)
