"""Build targets for Advent of Code 2016 Day 1 Julia solution."""

load("@rules_julia//julia:defs.bzl", "julia_binary", "julia_library")

# Solution library
julia_library(
    name = "lib",
    srcs = ["src/lib.jl"],
)

# Main verification binary - runs both parts and validates results
julia_binary(
    name = "s16e01-julia",
    srcs = ["src/main.jl"],
    deps = [":lib"],
)

# Part 1 binary - outputs only part 1 result
julia_binary(
    name = "part1",
    srcs = ["src/part1.jl"],
    deps = [":lib"],
)

# Part 2 binary - outputs only part 2 result
julia_binary(
    name = "part2",
    srcs = ["src/part2.jl"],
    deps = [":lib"],
)
